mas avances de biblioteca

--- a/src/app/pages/estudiantes/estudent-table/estudent-table.component.html
+++ b/src/app/pages/estudiantes/estudent-table/estudent-table.component.html
@@ -10,20 +10,20 @@
   <tbody>
   <tr>
     <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
+    <td>Arturo</td>
+    <td>Villa</td>
     <td>@mdo</td>
   </tr>
   <tr>
     <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>Thornton</td>
+    <td>Jorge</td>
+    <td>Salgado</td>
     <td>@fat</td>
   </tr>
   <tr>
     <th scope="row">3</th>
-    <td>Larry</td>
-    <td>the Bird</td>
+    <td>Juan</td>
+    <td>De la rosa</td>
     <td>@twitter</td>
   </tr>
   </tbody>
